trunk/tests/jastadd/negative/type_errors/L1/5_TypeChecking.ob
MODULE TestModule;
	VAR a : INTEGER;
BEGIN
	a := 1 + 2 + 3;
	a := a < 2
END TestModule.
